added support for other folders besides mods